--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
     <title>Subter Audio Library</title>
 </head>
 <body>
-    <center><h1>Favourites</h1></center>
+    <center><h1>No audios currently...</h1></center>
     <div class="favouritesclass"></div>
     <hr>
 </body>
 <script>
 // ok this is really hard to understand
 // basically its a.... table... that stores all the json names
-const users = ["20.json","123.json", "3.json", "9.json", "14.json", "8.json", "114.json", "563.json", "26.json", "1.json", "359.json", "12.json", "48.json", "150.json", "365.json", "119.json"];
+const users = [""];
 // for each user it runs the function fetching
 users.forEach(fetching);
 const getlocalstorage = JSON.parse(localStorage.getItem("favourite"));
