--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <title>Subter Audio Library</title>
 </head>
 <body>
-    <center><h1>No audios currently...</h1></center>
+    <center><h1>Audio list</h1></center>
     <div class="favouritesclass"></div>
     <hr>
 </body>
