--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <script>
 // ok this is really hard to understand
 // basically its a.... table... that stores all the json names
-const users = ["45.json,46.json"];
+const users = [""45.json","46.json""];
 // for each user it runs the function fetching
 users.forEach(fetching);
 const getlocalstorage = JSON.parse(localStorage.getItem("favourite"));
