--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <script>
 // ok this is really hard to understand
 // basically its a.... table... that stores all the json names
-const users = ["45.json", "46.json", "32.json", "15.json", "11.json", "1.json"];
+const users = ["45.json", "46.json", "32.json", "15.json", "11.json", "1.json", "99.json"];
 // for each user it runs the function fetching
 users.forEach(fetching);
 const getlocalstorage = JSON.parse(localStorage.getItem("favourite"));
