Update header text for audio list

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <title>Subter Audio Library</title>
 </head>
 <body>
-    <center><h1>Audio list</h1></center>
+    <center><h1>audios (credits to nil/chair for allowing me to host)</h1></center>
     <div class="favouritesclass"></div>
     <hr>
 </body>
